@@ -3,18 +3,18 @@
 	<groupId>com.slytechs.jnet.jnetpcap</groupId>
 	<artifactId>jnetpcap-wrapper</artifactId>
 	<!--  mvn versions:set -DnewVersion=_new_version_  -->
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.0</version>
 	<name>jNetPcap Wrapper</name>
 	<description>A java wrapper for native LIBPCAP library and PCAP API</description>
 	<url>https://www.jnetpcap.org</url>
 	<properties>
 		<parent.project>${project.artifactId}</parent.project>
-		
-		<jdk.version>21</jdk.version>
+
+		<jdk.version>22</jdk.version>
 		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
 		<maven.compiler.source>${jdk.version}</maven.compiler.source>
 		<maven.compiler.target>${jdk.version}</maven.compiler.target>
-		<java.preview>--enable-preview</java.preview>
+		<java.preview/>
 		<java.encoding>UTF-8</java.encoding>
 		<java.native>--enable-native-access=ALL-UNNAMED</java.native>
 		<groups>user-permission</groups>
@@ -37,18 +37,25 @@
 		</developer>
 	</developers>
 	<dependencies>
-		<!-- 
+		<!--
+		https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin  -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.11.0</version>
+		</dependency>
+		<!--
 		https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api  -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-suite-api</artifactId>
-			<version>1.10.1</version>
+			<version>1.9.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.10.1</version>
+			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -76,7 +83,7 @@
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 					<release>${jdk.version}</release>
-					<enablePreview>true</enablePreview>
+					<enablePreview>false</enablePreview>
 				</configuration>
 			</plugin>
 			<plugin>
